fixed spacing on employment page

--- a/employment/employment.css
+++ b/employment/employment.css
@@ -198,6 +198,6 @@ footer a:hover {
 
     .job {
         font-size: calc(2px + 3vw);
-        padding: 20px 20px;
+        padding: 8vh 20px;
     }
 }
